--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@ p {
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="brand" href="#">Dining View</a>
+				<a class="brand" href="#">Trending View</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
+                        <li><a href="mailto:seongsean@gmail.com?subject=Feedback">Contact</a></li>
+						<li><a href="#about"><!--About--></a></li>
+						<li><a href="#contact"><!--Contact--></a></li>
 					</ul>
 				</div>
 			</div>
@@ -142,13 +143,13 @@ p {
 	<div class="container">
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>Dining View</h1>
+				<h1>Trending</h1>
 			</div>
 		</div>
 		<div class="row-fluid subheading">
 			<div class="span12">
 				<p class="lead">Don't wait in line for food. Check here for
-					real-time updates!</p>
+					real-time updates at Boston College!</p>
 			</div>
 		</div>
 		<div class="row-fluid pitch">
@@ -197,8 +198,8 @@ p {
 					</div>
 				</div>
 				<div class="span6 offset3 order">
-					<H3 class="btn btn-danger btn-large" id="lower_indicatorbut">Packed!</h3>
-				</div>
+					<button class="btn btn-danger btn-large" id="lower_indicatorbut" onclick="alert('Packed: More than a 20 minute wait for food\nPeaceful: Walk in and enjoy!')">Packed!</button>
+				</div>
 			</div>
             <div class="span6 actions">
 				<div class="span8 offset2">
@@ -245,7 +246,7 @@ p {
 					</div>
 				</div>
 				<div class="span6 offset3 order">
-					<h3 class="btn btn-success btn-large" id="upper_indicatorbut" >Peaceful</h3>
+					<button class="btn btn-success btn-large" id="upper_indicatorbut" onclick="alert('Packed: More than a 20 minute wait for food\nPeaceful: Walk in and enjoy!')">Peaceful</button>
 				</div>
 			</div>
 		</div>
@@ -280,7 +281,7 @@ p {
                                 data-parent="#accordian2" href="#collapseThree"> The dining hall was packed when you said it wasn't! </a>
                         </div>
                         <div id="collapseThree" class="accordian-body collapse">
-                            <div class="accordian-inner">Send us an email and let us know when that was! We'll double check with our data to make sure it wasn't a bug </div>
+                            <div class="accordian-inner">Send us an <a href="mailto:seongsean@gmail.com?subject=Feedback">email</a> and let us know when that was! We'll double check with our data to make sure it wasn't a bug </div>
                         </div>
                     </div>
                             
