--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ p {
 			<div class="span12">
 				<p class="lead">Don't wait in line for food. Check here for
 					real-time updates at Boston College!</p>
+                <p>Weekends not supported yet</p>
 			</div>
 		</div>
 		<div class="row-fluid pitch">
