--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ p {
 	<div class="container">
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>Trending</h1>
+				<h1>Trending View</h1>
 			</div>
 		</div>
 		<div class="row-fluid subheading">
