Updated email to suppport@trending-view.com

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ p {
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
-                        <li><a href="mailto:seongsean@gmail.com?subject=Feedback">Contact</a></li>
+                        <li><a href="mailto:support@trending-view.com?subject=Feedback">Contact</a></li>
 						<li><a href="#about"><!--About--></a></li>
 						<li><a href="#contact"><!--Contact--></a></li>
 					</ul>
@@ -282,7 +282,7 @@ p {
                                 data-parent="#accordian2" href="#collapseThree"> The dining hall was packed when you said it wasn't! </a>
                         </div>
                         <div id="collapseThree" class="accordian-body collapse">
-                            <div class="accordian-inner">Send us an <a href="mailto:seongsean@gmail.com?subject=Feedback">email</a> and let us know when that was! We'll double check with our data to make sure it wasn't a bug </div>
+                            <div class="accordian-inner">Send us an <a href="mailto:support@trending-view.com?subject=Feedback">email</a> and let us know when that was! We'll double check with our data to make sure it wasn't a bug </div>
                         </div>
                     </div>
                             
