--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@ p {
 					<div class="accordian-group">
 						<div class="accordian-heading">
 							<a class="accordian-toggle" data-toggle="collapse"
-								data-parent="accordian2" href="#collapseOne"> How do we know if the dining hall is full or not?</a>
+								data-parent="accordian2" href="#collapseOne">What does it mean that you're in beta?</a>
 						</div>
 						<div id="collapseOne" class="accordian-body collapse">
-							<div class="accordian-inner"> We've taken extensive observations and have people reporting on a regulary basis. </div>
+							<div class="accordian-inner">It means that we're still in the starting stages so we don't have support for a lot of things yet (weekends, late-night) but stay tuned for more!</div>
 						</div>
 					</div>
 					<div class="accordian-group">
