--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="keywords" content="Boston College, Boston College Dining Hall, Boston College Lower, Boston College mcelroy, bc dining hall, bc dining hall hours, boston college dining hall hours">
+<meta name="description" content="Avoid the lines at Boston College dining halls by checking out Trending View!">
 <meta charset="utf-8">
 <title>Trending View</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -127,13 +129,13 @@ p {
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="brand" href="#">Trending View</a>
+				<a class="brand" href="index.html">Trending View</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
-                        <li><a href="mailto:support@trending-view.com?subject=Feedback">Contact</a></li>
-						<li><a href="#about"><!--About--></a></li>
-						<li><a href="#contact"><!--Contact--></a></li>
+						<li class="active"><a href="index.html">Home</a></li>
+						
+						<li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html"><!--About--></a></li>
 					</ul>
 				</div>
 			</div>
