--- a/index.html
+++ b/index.html
@@ -359,5 +359,16 @@ document.getElementById("upper_indicatorbut").className = "btn btn-success btn-l
 document.getElementById("upper_indicatorbut").innerHTML = "Peaceful";}
 </script>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-44209488-1', 'trending-view.com');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
