--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ p {
 		</div>
 		<div class="row-fluid subheading">
 			<div class="span12">
-				<p class="lead" style="color:white;">Tired of waiting in line? Avoid it!</p>
+				<p class="lead" style="color:white;">Don't wait in line anymore!</p>
 			</div>
 		</div></div>
         </div>
@@ -160,7 +160,8 @@ p {
         <div class="container" style="margin-top:1em; padding-top:4em;border-top:1px solid #eee; width=100%;">
 		<div class="row-fluid acc-wizard" style="margin-bottom:5em; ">
             <div class="span3" style="padding-left: 2em; padding-right:1em; border-right:1px solid #eee;">
-                <p style="margin-botton: 2em;"><strong>Trending View</strong> lets you see how busy restaurants, bars, dining halls, and even gyms are so you can avoid the line and spend more time enjoying your day!
+                <p style="margin-botton: 2em;"><strong>Trending View</strong> lets you see how busy restaurants, bars, dining halls, and even gyms are so you can avoid the line and spend more time enjoying your day! <strong>To get started, click on the
+                links to your right to see how busy each location is.</strong>
                 <br><em>As of now, we're only at Boston College</em></p>
                
                 <ul class="acc-wizard-sidebar">
