Updated description for Boston College

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ p {
                 <div class="accordian-group" style="padding-bottom:1em;" id="accordian-demo" >
                         <div class="accordian-heading" >
                             <a class="accordian-toggle" data-toggle="collapse"
-                                data-parent="#accordian2" href="#collapseOne"><h2>Lower</h2></a>
+                                data-parent="#accordian2" href="#collapseOne"><h2>Lower Dining Hall</h2></a>
                         </div>
                         <div id="collapseOne" class="accordian-body collapse">
                             <div class="accordian-inner"><div class="span9 actions">
@@ -231,7 +231,7 @@ p {
                  <div class="accordian-group">
                         <div class="accordian-heading">
                             <a class="accordian-toggle" data-toggle="collapse"
-                                data-parent="#accordian2" href="#collapseTwo"><h2>McElroy</h2></a>
+                                data-parent="#accordian2" href="#collapseTwo"><h2>McElroy/Upper Dining Hall</h2></a>
                         </div>
                         <div id="collapseTwo" class="accordian-body collapse">
                             <div class="accordian-inner">
