Updated description for Boston College

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ p {
 		</div>
 	</div>
 
-    <div style="background-color:#98AFC7">
+    <div style="background-color:#1569C7">
         <div class="container" style="padding-bottom:2em;">
 		<div class="row-fluid heading" style="padding-top:4em;">
 			<div class="span12">
